# OwlBot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/modules/: consts.rs  emotes.rs  mod.rs
