[package]
name = "Owlbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_env_load = "0.2.0"
websocket = "0.27.1"
rand = "*"
enum_all_variants = "0.2.0"
serde_json = "1.0.117"
serde = { version = "1.0.117", features = ["derive"] }
curl = "0.4.46"
sysinfo = "0.30.12"
open = "5.1.4"
twitcheventsub = "0.1.4"
#twitch_eventsub = { git = "https://github.com/lilith645/TwitchEventSub-rs.git" }
#twitcheventsub-rs = { path = "../TwitchEventSub-rs/twitcheventsub-rs" }
notcurses = "3.5.0"
image = { version = "0.25.2", features = ["gif"] }
attohttpc = "0.28.0"
crossterm = "0.27.0"
base64 = "0.22.1"
colored = "2"
colors-transform = "0.2.11"
log = "0.4"
simple-logging = "*"
